--- a/service/pom.xml
+++ b/service/pom.xml
@@ -79,6 +79,11 @@
          </dependency>-->
 
         <!-- jackson: JSON donusturmelerinde XML -->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <!--
           <dependency>
              <groupId>com.fasterxml.jackson.dataformat</groupId>
