--- a/service/client/package.json
+++ b/service/client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "material-react-table": "^2.13.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
