--- a/service/client/package.json
+++ b/service/client/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
-    "@mui/x-date-pickers": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +16,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.6",
     "material-react-table": "^2.13.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -28,7 +28,8 @@
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "unique-slug": "^4.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
