Swagger dökümanı hazırlandı.

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.port=4444
 spring.application.name=TODO List App
 
@@ -19,3 +18,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.h2.console.enabled=false
+
+springdoc.swagger-ui.path=/swagger-ui.html
