--- a/service/client/package.json
+++ b/service/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.12",
     "formik": "^2.4.6",
     "material-react-table": "^2.13.1",
     "notistack": "^3.0.1",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/webpack-env": "^1.18.5"
   }
 }
