Admin kullanıcının program başında kaydedilmesi için CommandLineRunner kullanıldı. sayfaların rolleri düeltildi.

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ application.security.jwt.expiration=3600000
 application.security.jwt.refresh-token-expired=4
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
